After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 642522 - gstvalue.c does not include a deserialize function for uchar
gstvalue.c does not include a deserialize function for uchar
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 0.10.33
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-02-17 00:36 UTC by Fabrizio Gennari
Modified: 2011-02-17 10:58 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Fabrizio Gennari 2011-02-17 00:36:54 UTC
If a GstElement installs a property with g_param_spec_uchar(), every attempt to assign that property a value by passing <propertyname>=<propertyvalue> to gst-launch-0.10 command line fails with the error "Could not set property <propertyname> in element".

gstvalue.c defines serialization and deserialization for many types, but uchar and guchar are not among them.
Comment 1 Fabrizio Gennari 2011-02-17 00:39:00 UTC
Example: element clmmenc (gst-plugins-good/ext/annodex/gstcmmlenc.c) installs property granule-shift with

 g_object_class_install_property (klass, GST_CMML_ENC_GRANULESHIFT,
      g_param_spec_uchar ("granule-shift",
          "Granuleshift",
          "The number of lower bits to use for partitioning a granule position",
          0, 64, 32,
          G_PARAM_READWRITE | G_PARAM_CONSTRUCT | G_PARAM_STATIC_STRINGS));
Comment 2 Tim-Philipp Müller 2011-02-17 10:31:14 UTC
Sigh, we really shouldn't have plugins with char/uchar-type properties. But since one exists and we can't change it...:
Comment 3 Tim-Philipp Müller 2011-02-17 10:58:13 UTC
commit 3a744ca44230e397e49e056799b17fe9db91cc5f
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Thu Feb 17 10:34:37 2011 +0000

    value: add (de)serialisation function for uchar
    
    .. since we sadly have a plugin in -good that has a uchar property
    (cmmlenc)
    
    https://bugzilla.gnome.org/show_bug.cgi?id=642522


(skipping the 'char' case for now, don't think we have plugins that need that)